# leetcode-coach

./: .env.example  .gitignore  LICENSE  README.md  WIKI_SETUP.md  coach.py  progress.json  pyproject.toml
.github/scripts/: prepare-wiki-content.py
.github/workflows/: wiki-sync.yml
problems/: problem_001_two_sum.py  problem_020_valid_parentheses.py  problem_121_best_time_to_buy_and_sell_stock.py  problem_206_reverse_linked_list.py  problem_217_contains_duplicate.py
topics/arrays-hashing/: README.md  meta.json
topics/arrays-hashing/notes/: concepts.md  session-notes-backup.md  session-notes.md
topics/arrays-hashing/problems/: contains-duplicate.md  two-sum.md
topics/linked-lists/: README.md  meta.json
topics/linked-lists/notes/: concepts.md  session-notes.md
topics/linked-lists/problems/: merge-two-sorted-lists.md  reverse-linked-list.md
wiki-content/: Arrays-Hashing.md  Backtracking.md  Dynamic-Programming.md  Greedy-Algorithms.md  Home.md  Linked-Lists.md  Sorting-Searching.md  Stacks-Queues.md  Trees-Graphs.md
