[project]
name = "leetcode-coach"
version = "1.0.0"
description = "AI-powered LeetCode coach with spaced repetition system"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
]

[project.scripts]
coach = "coach:cli"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["coach"]